<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"

    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rone"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/logding_bg"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:src="@drawable/close_loding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/logdin_title"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logding_bootm"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="账号"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/logding_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rl_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/logding_bootm">

            <TextView
                android:id="@+id/iv_show"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_grenn_corners"
                android:gravity="center"
                android:textColor="@color/logding_bg"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/logdin_ps"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="25dip"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/logding_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forpass"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/logding_bg"
                    android:text="忘记密码?" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_password"
            android:layout_marginTop="10dp"
            android:paddingLeft="25dp"
            android:text="@string/logdin_hit"
            android:textColor="@color/logding_text"
            android:textSize="14sp"
            android:visibility="gone" />


        <EditText
            android:id="@+id/appkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bt_logoButton"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="注册"
            android:textColor="@color/loadingwhitetext"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_loginForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bt_logoButton"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:onClick="register"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="注册"
            android:textColor="@color/logding_bg"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_logoButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:background="@drawable/shape_bt_grenn_corners"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:onClick="login"
            android:paddingBottom="3dp"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/rl_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    </RelativeLayout>


</RelativeLayout>

    <!--
    </ScrollView>-->
